<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>pcl_to_ply</name>
  <version>1.0.0</version>
  <description>Writes Pointcloud2 messages to .ply file</description>

  <maintainer email="jan.kuhlmann@informatik.hs-fulda.de">Jan Kuhlmann</maintainer>
  <author>Jan Kuhlmann</author>
  <license>BSD 3-Clause</license>
  
  <exec_depend>ros2launch</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
